# text-wallpaper-generator-4k

./: Cargo.toml  LICENSE  README.md
cargo/: .gitignore  Cargo.toml  settings.toml
cargo/src/: main.rs
